removed private info

--- a/mid-term-project-I/src/modules/WeatherEvents.ipynb
+++ b/mid-term-project-I/src/modules/WeatherEvents.ipynb
@@ -23,434 +23,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "2c359a69-8d2d-4b75-a674-9f8d8d83280f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['fl_date', 'mkt_unique_carrier', 'branded_code_share', 'mkt_carrier',\n",
-       "       'mkt_carrier_fl_num', 'op_unique_carrier', 'tail_num',\n",
-       "       'op_carrier_fl_num', 'origin_airport_id', 'origin', 'origin_city_name',\n",
-       "       'dest_airport_id', 'dest', 'dest_city_name', 'crs_dep_time', 'dep_time',\n",
-       "       'dep_delay', 'taxi_out', 'wheels_off', 'wheels_on', 'taxi_in',\n",
-       "       'crs_arr_time', 'arr_time', 'arr_delay', 'cancelled',\n",
-       "       'cancellation_code', 'diverted', 'dup', 'crs_elapsed_time',\n",
-       "       'actual_elapsed_time', 'air_time', 'flights', 'distance',\n",
-       "       'carrier_delay', 'weather_delay', 'nas_delay', 'security_delay',\n",
-       "       'late_aircraft_delay', 'first_dep_time', 'total_add_gtime',\n",
-       "       'longest_add_gtime', 'no_name'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "flights.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "3d102257-ffaf-4f46-a1a5-7d3bca6c8cbd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fl_date</th>\n",
-       "      <th>mkt_unique_carrier</th>\n",
-       "      <th>branded_code_share</th>\n",
-       "      <th>mkt_carrier</th>\n",
-       "      <th>mkt_carrier_fl_num</th>\n",
-       "      <th>op_unique_carrier</th>\n",
-       "      <th>tail_num</th>\n",
-       "      <th>op_carrier_fl_num</th>\n",
-       "      <th>origin_airport_id</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>...</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>carrier_delay</th>\n",
-       "      <th>weather_delay</th>\n",
-       "      <th>nas_delay</th>\n",
-       "      <th>security_delay</th>\n",
-       "      <th>late_aircraft_delay</th>\n",
-       "      <th>first_dep_time</th>\n",
-       "      <th>total_add_gtime</th>\n",
-       "      <th>longest_add_gtime</th>\n",
-       "      <th>no_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019-01-07</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA_CODESHARE</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>2989</td>\n",
-       "      <td>OO</td>\n",
-       "      <td>N744EV</td>\n",
-       "      <td>2989</td>\n",
-       "      <td>11049</td>\n",
-       "      <td>CLL</td>\n",
-       "      <td>...</td>\n",
-       "      <td>164</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019-01-07</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>UA_CODESHARE</td>\n",
-       "      <td>UA</td>\n",
-       "      <td>3827</td>\n",
-       "      <td>ZW</td>\n",
-       "      <td>N424AW</td>\n",
-       "      <td>3827</td>\n",
-       "      <td>13367</td>\n",
-       "      <td>MLI</td>\n",
-       "      <td>...</td>\n",
-       "      <td>139</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-01-07</td>\n",
-       "      <td>DL</td>\n",
-       "      <td>DL_CODESHARE</td>\n",
-       "      <td>DL</td>\n",
-       "      <td>3803</td>\n",
-       "      <td>OO</td>\n",
-       "      <td>N291SY</td>\n",
-       "      <td>3803</td>\n",
-       "      <td>13930</td>\n",
-       "      <td>ORD</td>\n",
-       "      <td>...</td>\n",
-       "      <td>733</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-01-07</td>\n",
-       "      <td>DL</td>\n",
-       "      <td>DL_CODESHARE</td>\n",
-       "      <td>DL</td>\n",
-       "      <td>3804</td>\n",
-       "      <td>OO</td>\n",
-       "      <td>N272SY</td>\n",
-       "      <td>3804</td>\n",
-       "      <td>13930</td>\n",
-       "      <td>ORD</td>\n",
-       "      <td>...</td>\n",
-       "      <td>733</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-01-07</td>\n",
-       "      <td>DL</td>\n",
-       "      <td>DL_CODESHARE</td>\n",
-       "      <td>DL</td>\n",
-       "      <td>3805</td>\n",
-       "      <td>OO</td>\n",
-       "      <td>N290SY</td>\n",
-       "      <td>3805</td>\n",
-       "      <td>11996</td>\n",
-       "      <td>GSP</td>\n",
-       "      <td>...</td>\n",
-       "      <td>610</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146480</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1191</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>N158AN</td>\n",
-       "      <td>1191</td>\n",
-       "      <td>11298</td>\n",
-       "      <td>DFW</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1389</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146481</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1193</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>N355PU</td>\n",
-       "      <td>1193</td>\n",
-       "      <td>13930</td>\n",
-       "      <td>ORD</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1440</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146482</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1194</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>N931NN</td>\n",
-       "      <td>1194</td>\n",
-       "      <td>13204</td>\n",
-       "      <td>MCO</td>\n",
-       "      <td>...</td>\n",
-       "      <td>192</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146483</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1194</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>N931NN</td>\n",
-       "      <td>1194</td>\n",
-       "      <td>13303</td>\n",
-       "      <td>MIA</td>\n",
-       "      <td>...</td>\n",
-       "      <td>192</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146484</th>\n",
-       "      <td>2019-01-01</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>1195</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>N190AA</td>\n",
-       "      <td>1195</td>\n",
-       "      <td>11057</td>\n",
-       "      <td>CLT</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1520</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>146485 rows × 42 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           fl_date mkt_unique_carrier branded_code_share mkt_carrier  \\\n",
-       "0       2019-01-07                 AA       AA_CODESHARE          AA   \n",
-       "1       2019-01-07                 UA       UA_CODESHARE          UA   \n",
-       "2       2019-01-07                 DL       DL_CODESHARE          DL   \n",
-       "3       2019-01-07                 DL       DL_CODESHARE          DL   \n",
-       "4       2019-01-07                 DL       DL_CODESHARE          DL   \n",
-       "...            ...                ...                ...         ...   \n",
-       "146480  2019-01-01                 AA                 AA          AA   \n",
-       "146481  2019-01-01                 AA                 AA          AA   \n",
-       "146482  2019-01-01                 AA                 AA          AA   \n",
-       "146483  2019-01-01                 AA                 AA          AA   \n",
-       "146484  2019-01-01                 AA                 AA          AA   \n",
-       "\n",
-       "        mkt_carrier_fl_num op_unique_carrier tail_num  op_carrier_fl_num  \\\n",
-       "0                     2989                OO   N744EV               2989   \n",
-       "1                     3827                ZW   N424AW               3827   \n",
-       "2                     3803                OO   N291SY               3803   \n",
-       "3                     3804                OO   N272SY               3804   \n",
-       "4                     3805                OO   N290SY               3805   \n",
-       "...                    ...               ...      ...                ...   \n",
-       "146480                1191                AA   N158AN               1191   \n",
-       "146481                1193                AA   N355PU               1193   \n",
-       "146482                1194                AA   N931NN               1194   \n",
-       "146483                1194                AA   N931NN               1194   \n",
-       "146484                1195                AA   N190AA               1195   \n",
-       "\n",
-       "        origin_airport_id origin  ... distance  carrier_delay weather_delay  \\\n",
-       "0                   11049    CLL  ...      164            NaN           NaN   \n",
-       "1                   13367    MLI  ...      139            NaN           NaN   \n",
-       "2                   13930    ORD  ...      733            NaN           NaN   \n",
-       "3                   13930    ORD  ...      733           52.0           0.0   \n",
-       "4                   11996    GSP  ...      610            NaN           NaN   \n",
-       "...                   ...    ...  ...      ...            ...           ...   \n",
-       "146480              11298    DFW  ...     1389            NaN           NaN   \n",
-       "146481              13930    ORD  ...     1440            0.0          20.0   \n",
-       "146482              13204    MCO  ...      192            NaN           NaN   \n",
-       "146483              13303    MIA  ...      192            NaN           NaN   \n",
-       "146484              11057    CLT  ...     1520            NaN           NaN   \n",
-       "\n",
-       "       nas_delay  security_delay  late_aircraft_delay  first_dep_time  \\\n",
-       "0            NaN             NaN                  NaN             NaN   \n",
-       "1            NaN             NaN                  NaN             NaN   \n",
-       "2            NaN             NaN                  NaN             NaN   \n",
-       "3            3.0             0.0                  0.0             NaN   \n",
-       "4            NaN             NaN                  NaN             NaN   \n",
-       "...          ...             ...                  ...             ...   \n",
-       "146480       NaN             NaN                  NaN             NaN   \n",
-       "146481      22.0             0.0                  0.0             NaN   \n",
-       "146482       NaN             NaN                  NaN             NaN   \n",
-       "146483       NaN             NaN                  NaN             NaN   \n",
-       "146484       NaN             NaN                  NaN             NaN   \n",
-       "\n",
-       "        total_add_gtime  longest_add_gtime  no_name  \n",
-       "0                   NaN                NaN      NaN  \n",
-       "1                   NaN                NaN      NaN  \n",
-       "2                   NaN                NaN      NaN  \n",
-       "3                   NaN                NaN      NaN  \n",
-       "4                   NaN                NaN      NaN  \n",
-       "...                 ...                ...      ...  \n",
-       "146480              NaN                NaN      NaN  \n",
-       "146481              NaN                NaN      NaN  \n",
-       "146482              NaN                NaN      NaN  \n",
-       "146483              NaN                NaN      NaN  \n",
-       "146484              NaN                NaN      NaN  \n",
-       "\n",
-       "[146485 rows x 42 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "id": "8954dca5-9b6e-43cf-a873-29bf3cd0cd6e",
    "metadata": {},
@@ -458,14 +30,6 @@
    "source": [
     "WeatherEvents = pd.read_csv(\"~/Desktop/WeatherEvents_Jan2016-Dec2020.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4415bbf4-0083-4d82-94e8-6429ac189b34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -638,12 +202,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "de7932d3-6b44-4b8e-b312-48e6acf21b9a",
+   "execution_count": 38,
+   "id": "d4cdf778-b20c-47e8-afad-7f8158df7672",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "US/Central     2611616\n",
+       "US/Eastern     2459344\n",
+       "US/Mountain     623358\n",
+       "US/Pacific      579888\n",
+       "Name: TimeZone, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "flights"
+    "WeatherEvents[\"TimeZone\"].value_counts()"
    ]
   },
   {
@@ -800,6 +379,53 @@
    "source": [
     "WeatherEvents[\"Severity\"].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9373d90c-5be6-4d84-9dfc-6a0d78cf9efc",
+   "metadata": {},
+   "source": [
+    "### Steps to merge the data\n",
+    "* Filter weather to the min/max interval of the flights data\n",
+    "* Add columns with local time instead of (UTC) - US daylight saving time is Mar-Nov So no need to do check that\n",
+    "* Create columns for Rain, Fog, Snow, Cold, Precipitation, Storm, and Hail for Arrival and Departure\n",
+    "* For each row in Flights:\n",
+    "    * Get all rows in Weather which contain departure and arrival time and locations\n",
+    "    * Populate the weather cil\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0f0081d-cafd-4c64-9905-7e523f1e780c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639af01c-3d89-4544-b9bb-6834ec39b7ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bce6a25a-e625-4f1d-be69-f38042127118",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bed8602-9f18-41a1-b50c-c3a2fb5c83c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
