added exploratory notebooks, data, and first test model

--- a/mid-term-project-I/src/modules/WeatherEvents-TrainData.ipynb
+++ b/mid-term-project-I/src/modules/WeatherEvents-TrainData.ipynb
@@ -516,6 +516,104 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "57e20bbb-215a-4c96-9611-f0c289b0b593",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Adak Island',\n",
+       " 'Aguadilla',\n",
+       " 'Anchorage',\n",
+       " 'Arcata',\n",
+       " 'Asheville',\n",
+       " 'Atlantic City',\n",
+       " 'Barrow',\n",
+       " 'Binghamton',\n",
+       " 'Boston',\n",
+       " 'Bozeman',\n",
+       " 'Bristol',\n",
+       " 'Cape Girardeau',\n",
+       " 'Champaign',\n",
+       " 'Charlotte Amalie',\n",
+       " 'Charlottesville',\n",
+       " 'Christiansted',\n",
+       " 'Clarksburg',\n",
+       " 'Cordova',\n",
+       " 'Deadhorse',\n",
+       " 'Des Moines',\n",
+       " 'Durango',\n",
+       " 'Eagle',\n",
+       " 'Elmira',\n",
+       " 'Fairbanks',\n",
+       " 'Flint',\n",
+       " 'Green Bay',\n",
+       " 'Guam',\n",
+       " 'Hancock',\n",
+       " 'Harrisburg',\n",
+       " 'Hilo',\n",
+       " 'Hilton Head',\n",
+       " 'Honolulu',\n",
+       " 'Hoolehua',\n",
+       " 'Iron Mountain',\n",
+       " 'Islip',\n",
+       " 'Joplin',\n",
+       " 'Kahului',\n",
+       " 'Kalamazoo',\n",
+       " 'Kapalua',\n",
+       " 'Ketchikan',\n",
+       " 'Kodiak',\n",
+       " 'Kona',\n",
+       " 'Kotzebue',\n",
+       " 'Lanai',\n",
+       " 'Lihue',\n",
+       " 'Marquette',\n",
+       " 'Mission',\n",
+       " 'Moab',\n",
+       " 'Moline',\n",
+       " 'Muskegon',\n",
+       " 'New Haven',\n",
+       " 'Newburgh',\n",
+       " 'Nome',\n",
+       " 'Ogden',\n",
+       " 'Paducah',\n",
+       " 'Pago Pago',\n",
+       " 'Ponce',\n",
+       " 'Providence',\n",
+       " 'Saipan',\n",
+       " 'San Juan',\n",
+       " 'Santa Ana',\n",
+       " 'Santa Barbara',\n",
+       " 'Santa Rosa',\n",
+       " 'Sault Ste. Marie',\n",
+       " 'Scranton',\n",
+       " 'Sitka',\n",
+       " 'St. Cloud',\n",
+       " 'St. George',\n",
+       " 'St. Louis',\n",
+       " 'St. Petersburg',\n",
+       " 'Staunton',\n",
+       " 'Sun Valley',\n",
+       " 'Unalaska',\n",
+       " 'Wenatchee',\n",
+       " 'White Plains',\n",
+       " 'Williamsport',\n",
+       " 'Wrangell',\n",
+       " 'Yakutat'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not_in_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "871edd4d-3369-4de2-aa85-ac227398de6f",
    "metadata": {},
    "outputs": [
@@ -525,7 +623,7 @@
        "342"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "23accff7-b378-4619-ab10-5c0808816396",
    "metadata": {},
    "outputs": [
@@ -546,7 +644,7 @@
        "(146485, 23)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "7125d50c-2962-475b-8661-433c75912ea3",
    "metadata": {
     "tags": []
@@ -570,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "951a1476-4279-4a5b-9cef-f8c80eb09ea8",
    "metadata": {},
    "outputs": [
@@ -580,7 +678,7 @@
        "(144458, 23)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
