added updated TEST data that contains some extra required columns

--- a/src/modules/feature_engeneering/Merging_weather_data_TEST.ipynb
+++ b/src/modules/feature_engeneering/Merging_weather_data_TEST.ipynb
@@ -576,7 +576,9 @@
       "Remaining = 49.48%\n",
       "Time elapsed 2403.66 seconds\n",
       "Remaining = 46.12%\n",
-      "Time elapsed 2564.2 seconds\n"
+      "Time elapsed 2564.2 seconds\n",
+      "Remaining = 42.75%\n",
+      "Time elapsed 2726.14 seconds\n"
      ]
     }
    ],
